website/websites/gp4/code/nbody-scala-2.log
BUILD COMMANDS FOR: nbody.scala-2.scala

Thu Jan 25 14:00:10 PST 2007

( if [ ! -d nbody.scala-2.scala_run ] ; then mkdir nbody.scala-2.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/nbody/nbody.scala-2.scala nbody.scala-2.scala_run/nbody.scala
( cd nbody.scala-2.scala_run ; /opt/scala-2.3.2/bin/scalac nbody.scala )
nbody.scala:10: error: value printf is not a member of object scala.Console
      Console.printf("{0,number,0.000000000}\n")( JovianSystem.energy )
             ^
nbody.scala:12: error: value printf is not a member of object scala.Console
      Console.printf("{0,number,0.000000000}\n")( JovianSystem.energy )
             ^
two errors found
make[3]: [nbody.scala-2.scala_run] Error 1 (ignored)
touch nbody.scala-2.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.3.2/bin/scala -classpath nbody.scala-2.scala_run nbody %A
************************************************************
*   TEST (nbody.scala-2.scala_run) FAILED - ERROR:  nbody.scala-2.scala_out differs from Output.200000
************************************************************
-rw-r--r-- 1 dunham users 26 Jun 15  2006 Output.200000
-rw-r--r-- 1 dunham users 20 Jan 25 14:00 nbody.scala-2.scala_out


PROGRAM OUTPUT
==============
no such file: nbody
